# gbapu

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
demo/: CMakeLists.txt  Wav.cpp  Wav.hpp  benchmark.cpp  demo.cpp  random.cpp
include/: gbapu.hpp
include/gbapu/: Apu.hpp  Buffer.hpp  Channel.hpp  ChannelFile.hpp  Envelope.hpp  Generator.hpp  HardwareFile.hpp  LengthCounter.hpp  NoiseChannel.hpp  NoiseGen.hpp  PulseChannel.hpp  PulseGen.hpp  Sequencer.hpp  Sweep.hpp  SweepPulseChannel.hpp  Timer.hpp  WaveChannel.hpp  WaveGen.hpp  constants.hpp
src/: Apu.cpp  Buffer.cpp  Channel.cpp  Envelope.cpp  Generator.cpp  LengthCounter.cpp  NoiseChannel.cpp  NoiseGen.cpp  PulseChannel.cpp  PulseGen.cpp  Sequencer.cpp  Sweep.cpp  SweepPulseChannel.cpp  Synth.cpp  Timer.cpp  WaveChannel.cpp  WaveGen.cpp  _internal.cpp
src/_internal/: BlipBuf.cpp  BlipBuf.hpp  Channel.cpp  Mixer.cpp  NoiseChannel.cpp  PulseChannel.cpp  Timer.cpp  WaveChannel.cpp
